recycle page search fix

--- a/views/services/recycle.ejs
+++ b/views/services/recycle.ejs
@@ -73,9 +73,9 @@
           </div> -->
 
         <div class="container">
-            <form action="/services/donate" method="post" class="searchbar">
+            <form action="/services/recycle" method="post" class="searchbar">
                 <input name="location" type="text" placeholder="Search for your location" name="q">
-                <button name="btn_donate" value="donate" type="submit">
+                <button name="btn_donate" value="recycle" type="submit">
                     <img src="../imagesClothes/search1.png">
                 </button>
             </form>
