--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,7 +40,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope-fill"></i><a href="mailto:contact@example.com">info@reclothenation.com</a>
-        <i class="bi bi-phone-fill phone-icon"></i> 9999 8888 11
+        <i class="bi bi-phone-fill phone-icon"></i> 44445555
       </div>
       <div class="social-links d-none d-md-block">
         <a href="https://twitter.com/i/flow/login?input_flow_data=%7B%22requested_variant%22%3A%22eyJsYW5nIjoiZW4ifQ%3D%3D%22%7D"
